# egress

./: Cargo.toml  Egress.toml  README.md
egress/artifacts/mismatches/: mismatches.json
egress/artifacts/numbers/: basic_arithmetic.json
egress/artifacts/rust_out/: basic_arithmetic.json
src/: artifact.rs  error.rs  lib.rs
tests/: mismatches.rs  numbers.rs
tests/mismatches/: Egress.toml
tests/mismatches/egress/artifacts/mismatches/: test.json
