[package]
name = "egress"
version = "0.1.0"
authors = ["Sean Leffler <sean@errno.com>"]
edition = "2018"

description = "A super simple, bare-bones regression testing crate."
readme = "README.md"

keywords = ["regression", "testing", "test", "regression testing", "persistent"]
categories = ["development-tools", "development-tools::testing"]
license = "MPL-2.0"

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.47"
toml = "0.5.6"
fs2 = "0.4.3"
failure = "0.1.6"
